--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "bank",
+    "name": "WareHouse",
     "version": "1.0.0",
     "description": "",
-    "main": "bank.js",
+    "main": "server.js",
     "scripts": {
         "start": "nodemon server.js",
         "test": "mocha --recursive --exit --timeout 100000"
@@ -19,6 +19,7 @@
         "ejs": "^3.1.8",
         "engines": "^0.4.0",
         "express": "^4.18.2",
+        "jest": "^29.5.0",
         "mocha": "^10.2.0",
         "mongoose": "^6.8.1",
         "mustache": "^4.2.0",
