--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "author": "Project",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "body-parser": "^1.20.1",
         "chai": "^4.3.7",
         "chai-http": "^4.3.0",
         "consolidate": "^0.16.0",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "destroy": "^1.2.0",
         "ejs": "^3.1.8",
         "engines": "^0.4.0",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "jest": "^29.5.0",
         "mocha": "^10.2.0",
         "mongoose": "^6.8.1",
