--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Project",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "chai": "^4.3.7",
@@ -22,8 +23,6 @@
     "engines": "^0.4.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "jest": "^29.5.0",
-    "mocha": "^10.2.0",
     "mongoose": "^6.8.1",
     "mustache": "^4.2.0",
     "nodemailer": "^6.8.0",
@@ -40,6 +39,8 @@
     "coverage-node": "^8.0.0",
     "eslint": "^8.42.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0"
   }
 }
