--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "engines": "^0.4.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "istanbul": "^0.4.5",
     "mongoose": "^6.8.1",
     "mustache": "^4.2.0",
     "nodemailer": "^6.8.0",
